--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-resource
 .ipynb_checkpoints
+
+
 kraggle_data
 cache   
 data/graph.graphml
 data/porto
-Trajectory and Road Network Data Analysis
+data/Task3
